// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecryptionFailureBody Should display "The sender has blocked you from receiving this message" 1`] = `
<div>
  <div
    class="mx_DecryptionFailureBody mx_EventTile_content"
  >
    The sender has blocked you from receiving this message because your device is unverified
  </div>
</div>
`;

exports[`DecryptionFailureBody Should display "Unable to decrypt message" 1`] = `
<div>
  <div
    class="mx_DecryptionFailureBody mx_EventTile_content"
  >
    Unable to decrypt message
  </div>
</div>
`;

exports[`DecryptionFailureBody should handle messages from users who change identities after verification 1`] = `
<div>
  <div
    class="mx_DecryptionFailureBody mx_EventTile_content mx_DecryptionFailureVerifiedIdentityChanged"
  >
    <span>
      <svg
        class="mx_Icon mx_Icon_16"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.713 17.713A.968.968 0 0 1 12 18a.968.968 0 0 1-.713-.287A.967.967 0 0 1 11 17a.97.97 0 0 1 .287-.712A.968.968 0 0 1 12 16a.97.97 0 0 1 .713.288A.968.968 0 0 1 13 17a.97.97 0 0 1-.287.713Zm0-4A.968.968 0 0 1 12 14a.968.968 0 0 1-.713-.287A.967.967 0 0 1 11 13V9a.97.97 0 0 1 .287-.712A.968.968 0 0 1 12 8a.97.97 0 0 1 .713.288A.968.968 0 0 1 13 9v4a.97.97 0 0 1-.287.713Z"
        />
        <path
          clip-rule="evenodd"
          d="M10.264 3.039c.767-1.344 2.705-1.344 3.472 0l8.554 14.969c.762 1.333-.2 2.992-1.736 2.992H3.446c-1.535 0-2.498-1.659-1.736-2.992l8.553-14.969ZM3.446 19 12 4.031l8.554 14.97H3.446Z"
          fill-rule="evenodd"
        />
      </svg>
      Verified identity has changed
    </span>
  </div>
</div>
`;
